# Cocos2d-Lua-Community

./: .gitignore  CHANGELOG  CHANGELOG.txt  README.md  VERSION  VERSION.txt  install-deps-linux.sh
cmake/Modules/: CocosBuildHelpers.cmake  CocosBuildSet.cmake  CocosConfigDefine.cmake  CocosConfigDepend.cmake
cmake/scripts/: sync_folder.py
cocos/: CMakeLists.txt  cocos2d.cpp  cocos2d.h
cocos/2d/: CCActionInterval.cpp  CCActionInterval.h  CCCamera.cpp  CCCamera.h  CCClippingRectangleNode.cpp  CCClippingRectangleNode.h  CCComponent.cpp  CCDrawNode.cpp  CCFontAtlas.cpp  CCFontAtlas.h  CCFontFreeType.cpp  CCFontFreeType.h  CCLabel.cpp  CCLabel.h  CCLabelAtlas.cpp  CCLabelTextFormatter.cpp  CCLayer.cpp  CCLayer.h  CCNode.cpp  CCNode.h  CCParticleSystem.cpp  CCProtectedNode.h  CCRenderTexture.cpp  CCScene.cpp  CCScene.h  CCSprite.cpp  CCSprite.h  CCSpriteBatchNode.cpp  CCSpriteFrameCache.cpp  CCSpriteFrameCache.h  CCTMXLayer.cpp  CCTMXLayer.h  CCTMXTiledMap.cpp  CCTMXTiledMap.h  CCTMXXMLParser.cpp  CCTMXXMLParser.h  CMakeLists.txt
cocos/audio/: CMakeLists.txt  RDAudio.cpp  RDAudio.h  RDAudioAAC.cpp  RDAudioAAC.h  RDAudioMP3.cpp  RDAudioMP3.h
cocos/base/: CCConfiguration.cpp  CCConfiguration.h  CCConsole.cpp  CCDirector.cpp  CCEventDispatcher.cpp  CCEventMouse.cpp  CCEventMouse.h  CCEventTouch.cpp  CCEventTouch.h  CCScriptSupport.cpp  CCScriptSupport.h  CMakeLists.txt  ccConfig.h  ccMacros.h  ccUtils.cpp  ccUtils.h
cocos/math/: Mat4.cpp  Mat4.h
cocos/network/: AsyncTCP.cpp  AsyncTCP.h  CMakeLists.txt  WebSocket.cpp
cocos/physics/: CCPhysicsWorld.cpp
cocos/platform/: CCDevice.h  CCFileUtils.cpp  CCFileUtils.h  CCGLView.cpp  CCGLView.h  CCNetwork.cpp  CCNetwork.h  CCPlatformMacros.h  CMakeLists.txt
cocos/renderer/: CCMaterial.cpp  CCMaterial.h  CCPass.cpp  CCPass.h  CCQuadCommand.cpp  CCRenderCommand.cpp  CCRenderCommand.h  CCRenderState.cpp  CCRenderState.h  CCRenderer.cpp  CCRenderer.h  CCTechnique.h  CCTexture2D.cpp  CCTexture2D.h  CCTextureCache.cpp  CCTextureCache.h  CMakeLists.txt  ccShaders.cpp  ccShaders.h
cocos/ui/: UIAbstractCheckButton.cpp  UIAbstractCheckButton.h  UIButton.cpp  UIButton.h  UIHelper.cpp  UIImageView.h  UILayout.cpp  UILayout.h  UIListView.cpp  UILoadingBar.h  UIRichText.cpp  UIScale9Sprite.cpp  UIScrollView.cpp  UISlider.cpp  UISlider.h  (+4 more)
extensions/: CMakeLists.txt  cocos-ext.h
templates/: CMakeLists.txt
tools/: CreateProject.py  EncodeRes.py  PackageScripts.py
tools/runner/: CMakeLists.txt
tools/runner/Classes/: AppDelegate.cpp  setup.cpp  setup.h
tools/runner/proj.linux/: main.cpp
tools/runner/proj.mac/: ConsoleWindowController.h  ConsoleWindowController.m  Icon.icns  Info.plist  main.mm
tools/runner/proj.win32/: game.rc  main.cpp  resource.h
(+309 files in other folders)
